# zellij-tmux-shim

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml
Formula/: zellij-tmux-shim.rb
qa/: PROBES.md  harness.py
shell/: zellij-tmux-shim.sh
src/: env.rs  error.rs  idmap.rs  lib.rs  main.rs  session.rs
src/cli/: args.rs  mod.rs
src/cmd/: control.rs  keys.rs  layout.rs  lifecycle.rs  mod.rs  query.rs  resize.rs  router.rs
src/format/: context.rs  mod.rs  render.rs
src/session/: cache.rs
src/zellij/: client.rs  mod.rs  types.rs
tests/: golden.rs
tests/fixtures/: list_panes.json  list_tabs.json
