[package]
name = "zellij-tmux-shim"
version = "0.1.3"
edition = "2021"
rust-version = "1.74"
description = "A tmux CLI compatibility shim that translates tmux commands into zellij, so tmux-expecting tools and AI coding agents (opencode, oh-my-openagent) run transparently inside a zellij session."
license = "MIT"
readme = "README.md"
repository = "https://github.com/koraykoska/zellij-tmux-shim"
homepage = "https://github.com/koraykoska/zellij-tmux-shim"
keywords = ["tmux", "zellij", "shim", "multiplexer", "opencode"]
categories = ["command-line-utilities", "development-tools"]

# The shim installs itself onto PATH under the name `tmux`.
[[bin]]
name = "tmux"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
